<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="admob_id">ca-app-pub-2833441527059830/3268354508</string>
    <string name="app_name">Gastos Simples</string>
    <string name="app_font">RobotoCondensed-Bold.ttf</string>
    <string name="title_activity_menu">Gastos</string>
    <string name="action_settings">Settings</string>
    <string name="action_filtro">Filtro</string>
    <string name="action_confirm">Salvar</string>
    <string name="dialog_add_title">Adicionar</string>
    <string name="dialog_add_sucess">Despesa adicionada com sucesso</string>
    <string name="dialog_add_error">Erro ao adicionar despesa :(</string>
    <string name="dialog_add_no_descripition">Sem descrição</string>
    <string name="dialog_add_invalid_value">Valor invalido</string>
    <string name="dialog_add_radiobutton_gain">Ganho</string>
    <string name="dialog_add_radiobutton_expense">Despesa</string>
    <string name="dialog_add_edittext_value">Valor</string>
    <string name="dialog_add_edittext_description">Descrição</string>
    <string name="dialog_add_text_choose">Programar</string>
    <string name="dialog_add_text_choose_edit">Data</string>
    <string name="dialog_add_text_ok">Ok</string>
    <string name="dialog_add_text_cancel">Cancelar</string>
    <string name="dialog_edit_sucess">Editado com sucesso</string>
    <string name="dialog_edit_error">Erro na edição</string>
    <string name="dialog_promo_text">A versão PRO do Gastos Simples já está disponível na GooglePlay. E a forma que encontrei para agradecer você, que usa a versão FREE, foi deixar disponível por U$0,99 (Preço minimo, se deixar grátis não poder mudar :/) até sexta-feira dia 24 :) Ahh, você pode importar seus dados com as novas funcionalidades adicionadas</string>
    <string name="dialog_promo_text2">Muito obrigado por usar o Aplicativo e, por favor, deixe sua avaliação na loja, isso ajuda muito a melhorar</string>
    <string name="dialog_promo_text_cancel">Depois</string>
    <string name="dialog_promo_text_ok">Instalar</string>
    <string name="dialog_recovery_text">Escolha o arquivo</string>
    <string name="dialog_recovery_text_ok">Recuperar</string>
    <string name="dialog_recovery_text_cancel">Cancelar</string>
    <string name="dialog_details_text_description">Descrição</string>
    <string name="dialog_details_text_value">Quanto?</string>
    <string name="dialog_details_text_date">Quando?</string>
    <string name="dialog_details_text_edit">Editar</string>
    <string name="dialog_details_text_cancel">Fechar</string>
    <string name="activity_details_text_value_string">Quanto?</string>
    <string name="activity_details_text_date_string">Quando?</string>
    <string name="fragment_settings_text_color_set">Mudar avisos</string>
    <string name="fragment_settings_text_color_set_green">Bom $$ :)</string>
    <string name="fragment_settings_text_color_set_yellow">Atenção...</string>
    <string name="fragment_settings_text_color_set_red">Quebrado :(</string>
    <string name="fragment_settings_text_balance_type">Mostrar saldo</string>
    <string name="fragment_settings_radio_balance_type_total">Total</string>
    <string name="fragment_settings_radio_balance_type_month">Mês</string>
    <string name="fragment_filtro_text_date">Data</string>
    <string name="fragment_filtro_text_date_month">Mês</string>
    <string name="fragment_filtro_text_date_year">Ano</string>
    <string name="fragment_about_text_more_apps">Mais aplicativos</string>
    <string name="fragment_about_tolivehealthy_text">ToLive Healthy</string>
    <string name="fragment_about_gastossimplespro_text">Gastos Simples PRO</string>
    <string name="fragment_about_text_remove_ad_title">Ajudar o desenvolvedor</string>
    <string name="fragment_about_text_remove_ad">Remover anúncios</string>
    <string name="fragment_about_text_remove_ad_price">$0,99</string>
    <string name="fragment_about_text_remove_ad_removed">Obrigado :)</string>
    <string name="fragment_about_text_remove_ad_price_removed">-</string>
    <string name="fragment_about_toast_remove_ad">Anúncio removido! Obrigado :)</string>
    <string name="fragment_about_text_fb_fanpage">Social</string>
    <string name="fragment_about_text_fb">Facebook</string>
    <string name="fragment_store_text_options">Opções</string>
    <string name="fragment_store_text_email">Email</string>
    <string name="fragment_store_text_email_subject">[Gastos Simples] Relatorio de gastos</string>
    <string name="fragment_store_text_email_instructions">Para recuperar salve o arquivo em anexo na pasta "Gastos Simples" do seu celular.</string>
    <string name="fragment_store_text_sdcard">Celular</string>
    <string name="fragment_store_text_sucess">Gastos salvos no cartão SD</string>
    <string name="fragment_store_text_fail">Erro ao salvar no cartão SD</string>
    <string name="fragment_store_text_fail_open_SD">Erro ao abrir cartão SD</string>
    <string name="fragment_recovery_text_options">Opções</string>
    <string name="fragment_recovery_text_sdcard">Celular</string>
    <string name="fragment_recovery_text_sucess">Dados recuperados com sucesso</string>
    <string name="fragment_recovery_text_fail">Erro ao recuperar dados do cartão SD</string>
    <string name="fragment_recovery_text_choose">Erro: escolha um arquivo para restaurar os dados</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="title_activity_filtro">Filtro</string>
    <string name="title_activity_add">Adicionar</string>
    <string name="title_activity_details">Detalhes</string>
    <string name="fragment_list_contextmenu_item_edit">Editar</string>
    <string name="fragment_list_contextmenu_item_delete">Deletar</string>
    <string name="fragment_list_text_balance">Saldo</string>
    <string name="fragment_list_text_gain">Ganhos</string>
    <string name="fragment_list_text_expnese">Despesa</string>
    <string name="fragment_add_button">$</string>

    <string-array name="nav_drawer_items">

        <!-- <item>Adicionar</item> -->
        <item>Gastos</item>
        <item>Armazenar</item>
        <item>Recuperar</item>
        <item>Configurar</item>
        <item>Info</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons_green">

        <!-- <item>@drawable/ic_add</item> -->
        <item>@drawable/ic_action_maps_local_atm_green</item>
        <item>@drawable/ic_action_file_file_upload_green</item>
        <item>@drawable/ic_action_file_file_download_green</item>
        <item>@drawable/ic_action_action_settings_green</item>
        <item>@drawable/ic_action_action_info_outline_green</item>
    </array>
    <array name="nav_drawer_icons_yellow">

        <!-- <item>@drawable/ic_add</item> -->
        <item>@drawable/ic_action_maps_local_atm_yellow</item>
        <item>@drawable/ic_action_file_file_upload_yellow</item>
        <item>@drawable/ic_action_file_file_download_yellow</item>
        <item>@drawable/ic_action_action_settings_yellow</item>
        <item>@drawable/ic_action_action_info_outline_yellow</item>
    </array>
    <array name="nav_drawer_icons_red">

        <!-- <item>@drawable/ic_add</item> -->
        <item>@drawable/ic_action_maps_local_atm_red</item>
        <item>@drawable/ic_action_file_file_upload_red</item>
        <item>@drawable/ic_action_file_file_download_red</item>
        <item>@drawable/ic_action_action_settings_red</item>
        <item>@drawable/ic_action_action_info_outline_red</item>
    </array>

    <string-array name="spinner_months">
        <item>Jan</item>
        <item>Fev</item>
        <item>Mar</item>
        <item>Abr</item>
        <item>Mai</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Ago</item>
        <item>Set</item>
        <item>Out</item>
        <item>Nov</item>
        <item>Dez</item>
    </string-array>
    <string-array name="spinner_years">
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
