<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/snow"
    android:orientation="vertical">

    <br.com.tolive.simplewallet.views.CustomTextView
        app:font="@string/app_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:layout_gravity="center_vertical"
        android:textSize="@dimen/app_font_title"
        android:text="@string/fragment_recovery_text_options" />

    <br.com.tolive.simplewallet.views.CustomView
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_divisor_medium"
        android:background="@color/gray"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_recovery"
        >

        <br.com.tolive.simplewallet.views.CustomTextView
            app:font="@string/app_font"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/gray"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="28sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/fragment_recovery_text_sdcard" />

        <ImageView
            android:id="@+id/fragment_recory_image_sdcard"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:contentDescription="@android:string/untitled"
            android:layout_gravity="end"/>

    </RelativeLayout>

    <br.com.tolive.simplewallet.views.CustomView
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_divisor_small"
        android:background="@color/gray"
        />

</LinearLayout>

</ScrollView>

